Fix missing background (#1611)

--- a/src/components/ButtonWithTooltip/ButtonWithTooltip.module.css
+++ b/src/components/ButtonWithTooltip/ButtonWithTooltip.module.css
@@ -12,9 +12,9 @@
 
 .tooltipClass span,
 .notificationClass span {
-  @apply text-white font-light rounded-md text-center inline-block;
+  @apply text-white font-light bg-notification-background rounded-lg text-center inline-block;
   font-size: 14px;
-  padding: 5px 8px;
+  padding: 2px 8px;
 }
 
 /* NOTE: we're hiding tooltip if we clicked the button, so on :focus state */
